--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "node app",
-    "start": "node app",
+    "start": "nodemon app",
     "data:import": "node seeder",
     "data:destroy": "node seeder -d"
   },
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
